logs/watchdog_20251013_1110.log
[13/10/2025 11:10:27,57] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[13/10/2025 11:10:27,81] END WATCHDOG 
